--- a/site.html
+++ b/site.html
@@ -5,77 +5,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    />
   </head>
   <body>
-    <div class="first">
-      <div class="navbar-wrapper">
+    <section class="first">
+      <section class="navbar-wrapper">
         <a href="">
           <img src="sdaasdasdasd.png" alt="" />
         </a>
-        <div class="middle">
+        <section class="middle">
           <a href="/">Home</a>
           <a href="/">Pricing</a>
           <a href="/">Blog</a>
           <a href="/">About</a>
           <a href="/">Help</a>
           <a href="/">Content</a>
-        </div>
-        <div class="right">
+        </section>
+        <section class="right">
           <button>Hire</button>
-        </div>
-      </div>
-      <div class="center">
+        </section>
+      </section>
+      <section class="center">
         <h3 class="xd">In need of a</h3>
         <h3 class="xd">Private Investigator?</h3>
         <h3 class="xdd">Hire us</h3>
+      </section>
+    </section>
+    <section class="id">
+      <div class="data">
+        <h1>David Daniels</h1>
+        <h4>Private Investigator</h4>
+        <div class="container1" style="--order: 1">
+          <img src="Capture.PNG" alt="" />
+          <p>123 Anywhere St., Any City., ST 12345</p>
+        </div>
+        <div class="container2 container" style="--order: 2">
+          <img src="Capture2.PNG" alt="" />
+          <p>+123-456-7890</p>
+        </div>
+        <div class="container3 container" style="--order: 2.75">
+          <img src="Capture3.PNG" alt="" />
+          <p>daviddaniels@domain.com</p>
+        </div>
+        <div class="container4 container" style="--order: 3.5">
+          <img src="Capture4.PNG" alt="" />
+          <p>www.david-daniels-domain.com</p>
+        </div>
       </div>
-    </div>
-    <div class="second">
-      <p class="wife">Your wife is cheating on you?</p>
-      <p class="car">You neighbor got a new car that he cannot afford?</p>
-      <p class="daug">
+      <img class="me" src="me.jpg" alt="me" />
+    </section>
+    <section class="second">
+      <p class="wife" style="--order: 1">Your wife is cheating on you?</p>
+      <p class="car" style="--order: 2">
+        You neighbor got a new car that he cannot afford?
+      </p>
+      <p class="daug" style="--order: 3">
         You daughter got a new boyfriend and you need him checked out?
       </p>
-      <p class="worker">
+      <p class="worker" style="--order: 4">
         You want to hire a new employee and you need a background check?
       </p>
-      <p class="help">
+      <p class="help" style="--order: 5">
         We can help you with all of the above. Click the Hire button in the top
         right corner and message us!
       </p>
-    </div>
-    <div class="third">
-      <div class="p1 p">
+    </section>
+    <section class="third">
+      <section class="p1 p">
         <img class="ppl" src="thispersondoesnotexist.jpg" alt="" />
-        <p>This agency is the best!</p>
-        <p>They exposed my cheating wife!</p>
+        <p>This agency is the best!<br />They exposed my cheating wife!</p>
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
-      </div>
-      <div class="p2 p">
+      </section>
+      <section class="p2 p">
         <img class="ppl" src="thispersondoesnotexist2.jpg" alt="" />
-        <p>This agency is the best!</p>
-        <p>They found a person that stole my bike!</p>
+        <p>
+          This agency is the best!<br />They found a person that stole my bike!
+        </p>
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
-      </div>
-      <div class="p3 p">
+      </section>
+      <section class="p3 p">
         <img class="ppl" src="thispersondoesnotexist3.jpg" alt="" />
-        <p>This agency is the best!</p>
-        <p>They made my student loans go away!</p>
+        <p>This agency is the best!<br />They made my student loans go away!</p>
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
         <img class="stars" src="ziXeXk7AT.png" alt="" />
-      </div>
-    </div>
-    <footer></footer>
+      </section>
+    </section>
+    <script src="scr.js"></script>
   </body>
 </html>
